# Easy_Jetson_yolo_Deployment

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cicd.yml
config/: default.yaml
include/: config_loader.h  cuda_utils.h  gst_decoder.h  inference_buffer.h  pipeline.h  yolo_engine.h
src/: config_loader.cpp  gst_decoder.cpp  pipeline.cpp  yolo_engine.cu
